--- a/webapp/src/components/EmptyState.css
+++ b/webapp/src/components/EmptyState.css
@@ -9,28 +9,28 @@
 
     .empty-state-icon {
         font-size: 4rem;
+        color: var(--color-text-tertiary);
     }
 
     h2 {
         font-family: var(--font-display);
         font-size: 1.5rem;
-        color: var(--charcoal);
+        color: var(--color-text-primary);
     }
 
     p {
-        color: var(--charcoal-light);
+        color: var(--color-text-secondary);
     }
 
     &.loading {
         p {
-            color: var(--charcoal-light);
+            color: var(--color-text-secondary);
         }
     }
 
     &.error {
         p {
-            color: var(--charcoal-light);
+            color: var(--color-text-secondary);
         }
     }
 }
-
