--- a/webapp/src/components/LoadingSpinner.css
+++ b/webapp/src/components/LoadingSpinner.css
@@ -1,8 +1,8 @@
 .loading-spinner {
     width: 40px;
     height: 40px;
-    border: 3px solid var(--cream-dark);
-    border-top-color: var(--poche-coral);
+    border: 3px solid var(--color-border-primary);
+    border-top-color: var(--color-brand-primary);
     border-radius: 50%;
     animation: spin 0.8s linear infinite;
 
@@ -24,4 +24,3 @@
         transform: rotate(360deg);
     }
 }
-
