--- a/webapp/src/components/Logo.css
+++ b/webapp/src/components/Logo.css
@@ -13,6 +13,6 @@
         font-weight: 600;
         font-size: 1em;
         letter-spacing: -0.5;
-        color: var(--charcoal);
+        color: var(--color-text-primary);
     }
 }
